# onnx-tutorial

./: .gitignore  README.md
pytorch-tutorial/: README.md
pytorch-tutorial/pytorch-onnx-tutorial/: 01-export_model_to_onnx.py  02-try_onnx_runtime.py  03-onnx-operator.py  export_model_to_onnx.py  mymodel.py  pyproject.toml
pytorch-tutorial/pytorch-onnx-tutorial/data/: custom_add_model.onnx  my_image_classifier.onnx
